# zen-erp

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  Untitled  deployment_agy.md  docker-compose.yml
.github/workflows/: check.yml  deploy.yml
core/auth/: Cargo.toml
core/auth/src/: jwt.rs  lib.rs  main.rs  password.rs  service.rs
core/billing/: Cargo.toml
core/billing/src/: lib.rs  main.rs  service.rs
core/event-bus/: Cargo.toml
core/event-bus/src/: lib.rs
core/health-check/: Cargo.toml
core/health-check/src/: main.rs
core/tenancy/: Cargo.toml
core/tenancy/src/: audit_service.rs  lib.rs  main.rs  service.rs
deploy/docker/: Dockerfile.auth  Dockerfile.billing  Dockerfile.frontend  Dockerfile.gateway  Dockerfile.health  Dockerfile.school  Dockerfile.tenancy
deploy/k8s/: 01-secrets.yaml  02-postgres.yaml  03-nats.yaml  04-backend.yaml  05-gateway.yaml  06-frontend.yaml  07-ingress.yaml
deploy/nginx/: default.conf
dev/: 10_development_phases.md  11_environment_and_devops.md  12_testing_strategy.md  13_plugin_requirements_school.md  1_product_requirements.md  2_user_stories_and_acceptance.md  3_information_architecture.md  4_system_architecture.md  5_database_schema.md  6_api_contracts.md  7_monorepo_structure.md  8_scoring_engine.md  9_engineering_scope_definition.md
dev_frontend/: README.md  auth.md  health.md  school_portals.md  tenancy.md
dev_frontend/design/: auth.md  common_components.md  dashboards.md  forms.md  lists.md
docs/: Architecture.md  DIRECTORY_STRUCTURE.md  PRD.md  SD.md  Tech.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthLayout.tsx  CreateTenantModal.css  CreateTenantModal.tsx  CredentialCard.tsx  InviteUserModal.css  InviteUserModal.tsx  MiniChart.css  MiniChart.tsx  PortalSidebar.css  PortalSidebar.tsx  PortalTopBar.css  PortalTopBar.tsx  ProtectedRoute.tsx  Sidebar.css  Sidebar.tsx  StatCard.css  StatCard.tsx  SuspendedBanner.css  SuspendedBanner.tsx  TopBar.css  TopBar.tsx
frontend/src/config/: portalNavConfig.ts
frontend/src/contexts/: SchoolContext.tsx  ThemeContext.tsx
frontend/src/data/: mockTimetable.ts
frontend/src/layouts/: AdminLayout.tsx  AppLayout.css  AppLayout.tsx  PortalLayout.css  PortalLayout.tsx  StaffLayout.tsx  StudentLayout.tsx
frontend/src/lib/: api.ts  auth.ts  tenants.ts
frontend/src/pages/: AdminDashboardPage.css  AdminDashboardPage.tsx  AdminSystemHealthPage.css  AdminSystemHealthPage.tsx  AdminTenantsPage.css  AdminTenantsPage.tsx  AuditLogPage.tsx  AuthPages.css  BillingPage.css  BillingPage.tsx  DashboardPage.css  DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  PluginMarketplacePage.tsx  PortalDashboard.tsx  RegisterPage.tsx  SchoolLoginPage.tsx  SchoolSelectorPage.css  SchoolSelectorPage.tsx  SettingsPage.tsx  TenantSelectorPage.css  TenantSelectorPage.tsx  UserProfilePage.css  UserProfilePage.tsx  UsersPage.css  UsersPage.tsx
frontend/src/stores/: useAuthStore.ts  useTenantStore.ts
frontend/src/styles/: bootstrap-overrides.css  template.css  theme-variables.css  utilities.css
infra/docker/: init-db.sql
infrastructure/k8s/: finance-deployment.yaml  ingress.yaml  kernel-deployment.yaml  namespace.yaml
kernel/: BUILDING.md  Cargo.toml  Dockerfile  use-gnu-toolchain.ps1
kernel/src/: main.rs
kernel/src/middleware/: mod.rs  tenant.rs
kernel/src/router/: mod.rs  plugin_router.rs
libs/db-utils/: Cargo.toml
libs/db-utils/src/: lib.rs
libs/logger/: Cargo.toml
libs/logger/src/: lib.rs
libs/proto/: Cargo.toml  build.rs
libs/proto/proto/: audit.proto  auth.proto  billing.proto  common.proto  health.proto  school.proto  tenancy.proto
libs/proto/src/: lib.rs
migrations/: 20250218000000_create_core_tables.sql  20250219000000_rbac_and_subscriptions.sql  20250219000001_school_plugin_tables.sql  20250219000002_enable_rls.sql  20250222000000_create_audit_log.sql  20250226000000_number_sequences.sql
plugins/finance/: Dockerfile
plugins/finance/app/: __init__.py  main.py
plugins/school/: Cargo.toml
plugins/school/src/: main.rs  service.rs
scripts/: dev.sh
template/: 404-error.html  500-error.html  academic-reasons.html  accounts-income.html  accounts-invoices.html  accounts-transactions.html  activities.html  add-invoice.html  add-staff.html  add-student.html  add-teacher.html  approve-request.html  attendance-report.html  ban-ip-address.html  blank-page.html  blog-categories.html  blog-comments.html  blog-tags.html  blog.html  calendar.html  call-history.html  call.html  chart-apex.html  chart-c3.html  chart-flot.html  chart-js.html  chart-morris.html  chart-peity.html  chat.html  cities.html  class-home-work.html  class-report.html  class-room.html  class-routine.html  class-section.html  class-subject.html  class-syllabus.html  class-time-table.html  classes.html  collect-fees.html  (+220 more)
template/assets/css/: style.css.map
template/assets/js/: script.js  theme-script.js
(+36 files in other folders)
