[workspace]
members = [
  "bin/gateway",
  "core/health-check",
  "core/auth",
  "core/tenancy",
  "core/billing",
  "core/event-bus",
  "plugins/school",
  "libs/db-utils",
  "libs/proto",
  "libs/logger",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web / gRPC
axum = { version = "0.7", features = ["json", "macros"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros", "bigdecimal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# IDs & Time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Messaging
async-nats = "0.37"

# Misc
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
