[package]
name = "saas-erp-kernel"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant SaaS ERP API Gateway & Orchestrator"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
reqwest = { version = "0.12", features = ["json"] }
