[package]
name = "erp-auth"
version.workspace = true
edition.workspace = true

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

erp-proto = { path = "../../libs/proto" }
erp-logger = { path = "../../libs/logger" }
erp-db-utils = { path = "../../libs/db-utils" }
