[package]
name = "erp-tenancy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tenancy-service"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

erp-proto = { path = "../../libs/proto" }
erp-logger = { path = "../../libs/logger" }
erp-db-utils = { path = "../../libs/db-utils" }
